--- a/style.css
+++ b/style.css
@@ -10,15 +10,17 @@
     margin: 0;
     padding: 0;
 }
-body{
+main{
     background:fixed url(./assets/images/mountains.png) no-repeat;
     background-position: center;
     background-size: auto;
+    height: calc(100vh)
 }
 .navbar{
     display: flex;
     width: 100%;
     justify-content: space-between;
+    position: sticky;
 }
 .nav-logo{
     margin-left: 68px;
@@ -59,6 +61,7 @@ a{
     font-size: 20px;
     width: 312px;
     font-family: "Manrope",sans-serif;
+    color: #FFFFFF;
 }
 
 button{
@@ -74,3 +77,61 @@ button{
 button a{
     color: #FFFFFF;
 }
+
+#model{
+    width: 100%;
+    display: flex;
+    height: 100vh;
+    background-color: #FFD6D4 ;
+
+}
+.left-box{
+    width: 50%;
+    position: relative;
+}
+.image{
+    border: 4px solid #FD5D51;
+    width: 60%;
+    height: 45%;
+    border-radius: 20px;
+    margin: 20%;
+    position: absolute;
+    z-index: 1;
+}
+
+.left-box>img{
+    position: absolute;
+    width: 60%;
+    z-index: 4;
+    margin: 15%;
+}
+
+.right-box{
+    /* border: 1px red solid; */
+    align-items: center;
+    text-align: center;
+    margin-left: 10%;
+    margin-top: 20%;
+}
+.upload-btn-wrapper {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+  }
+  
+  .btn {
+    border: 2px solid#FD5D51;
+    padding: 5px 70px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    width: 100%;
+  }
+  
+  .upload-btn-wrapper input[type=file] {
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+  }
